tests/rosetta/out/Haskell/active-directory-search-for-a-user.error
run error: exit status 1

/workspace/mochi/tests/rosetta/out/Haskell/active-directory-search-for-a-user.hs:140:1: error:
    Multiple declarations of ‘main’
    Declared at: /workspace/mochi/tests/rosetta/out/Haskell/active-directory-search-for-a-user.hs:131:1
                 /workspace/mochi/tests/rosetta/out/Haskell/active-directory-search-for-a-user.hs:140:1
    |
140 | main = do
    | ^^^^
